--- a/app/assets/stylesheets/_tables.scss
+++ b/app/assets/stylesheets/_tables.scss
@@ -407,3 +407,8 @@ table.nested-summary {
     }
   }
 }
+
+
+table.previously-uploaded th:first-child {
+  width: 75%;
+}
